--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.SeriesDetailActivity">
-        </activity>
+        <activity android:name=".ui.SeriesDetailActivity"/>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,6 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <receiver
+                android:name=".reciever.InternetConnectionReciever"
+                android:enabled="true"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.miracozkan.tvseries.hasconnection"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
