UI Restored and returned Only Retrofit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.SeriesDetailActivity"/>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.SeriesDetailActivity" />
+        <activity android:name=".ui.MainActivity"></activity>
 
         <receiver
                 android:name=".reciever.InternetConnectionReciever"
@@ -30,7 +31,6 @@
                 <action android:name="com.miracozkan.tvseries.hasconnection"/>
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
