--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,6 @@ dependencies {
     implementation 'com.github.iammert:ScalingLayout:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
 
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation project(':coolmenu')
 }
