--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,32 +54,41 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.9.6'
     implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 
+    //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //recyclerview & cardview
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
+    //coroutines
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
+    //viewmodel & livedata & observer
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha02'
 
+    //room
     implementation 'androidx.room:room-runtime:2.1.0'
     implementation 'androidx.room:room-ktx:2.1.0'
     kapt 'androidx.room:room-compiler:2.1.0'
 
+    //custom views
     implementation 'com.github.iammert:ScalingLayout:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
-
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
-    implementation project(':coolmenu')
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+
 }
