--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.miracozkan.tvseries">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.miracozkan.tvseries">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.SelectionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.DEFAULT" />
-            </intent-filter>
-        </activity>
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,13 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.SeriesDetailActivity" />
+
+        <activity
+            android:name=".ui.SeriesDetailActivity"
+            android:parentActivityName=".ui.MainActivity" />
         <activity android:name=".ui.MainActivity" />
 
         <receiver
-                android:name=".reciever.InternetConnectionReciever"
-                android:enabled="true"
-                android:exported="false">
+            android:name=".reciever.InternetConnectionReciever"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.miracozkan.tvseries.hasconnection" />
             </intent-filter>
