--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+
+    ext {
+        kotlin_version = '1.3.41'
+        recycler_view = '1.0.0'
+        retrofit = '2.6.0'
+        room = '2.1.0'
+        picasso = '2.71828'
+        exo_player = '2.9.6'
+        lifecycle='2.2.0-alpha02'
+    }
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
