--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +23,9 @@
         </activity>
 
         <activity
-            android:name=".ui.SeriesDetailActivity"
-            android:parentActivityName=".ui.MainActivity" />
-        <activity android:name=".ui.MainActivity" />
+                android:name=".ui.activity.SeriesDetailActivity"
+                android:parentActivityName=".ui.activity.MainActivity" />
+        <activity android:name=".ui.activity.MainActivity" />
 
         <receiver
             android:name=".reciever.InternetConnectionReciever"
