--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,13 +110,22 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
+    //LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 
+    //ViewPager 2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-
+    //Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha02"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha02"
 
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.26'
+    implementation "com.google.dagger:dagger-android:2.25.4"
+    implementation "com.google.dagger:dagger-android-support:2.25.4"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.25.4"
+    kapt "com.google.dagger:dagger-android-processor:2.25.4"
+    kapt 'com.google.dagger:dagger-compiler:2.25.4'
 
 }
